Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/DefiniteAssignment/UncaughtException.out
UncaughtException.java:20:1: compiler.err.override.meth.doesnt.throw: (compiler.misc.cant.implement: throwCheckedException(), A, throwCheckedException(), I), java.lang.Throwable
1 error
